log
Sun 31 Mar 2024 05:49:01 PM UTC: 
 tests:  0|6
total_score: 0/70
bd2cad7
Sun 31 Mar 2024 05:56:25 PM UTC: 
 list.c | 36 ++++++++++++++----------------------
 1 file changed, 14 insertions(+), 22 deletions(-)
 tests:  1|5
total_score: 10/70
4aa8c2e
Sun 31 Mar 2024 07:13:46 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5b91d07
Sun 31 Mar 2024 07:18:35 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
965c465
Sun 31 Mar 2024 07:23:14 PM UTC: 
 list.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
55781e0
Sun 31 Mar 2024 07:47:53 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
42ee18e
Sun 31 Mar 2024 07:56:40 PM UTC: 
 list.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:78:23: error: expected expression before ‘)’ token
   78 |   Node *Node = (Node *)malloc(sizeof(Node));
      |                       ^
Compilation failed
8b75454
